<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NaNoWriMo</string>
    <string name="app_key">fqgtlyji53eihg4</string>
    <string name="title_activity_files">Files</string>
    <string name="title_activity_openwith">Open With</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loadingâ¦</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>


    <string name="welcome_msg">Welcome!</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">NaNoWriMo Invite</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-6337198919618275/3069110542</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_events">Events</string>


    <string name="configure">Display daily word count remaining for</string>
    <string name="configure_global">Display current word count for</string>
    <string name="add_widget">Save widget</string>
    <string name="default_username">username</string>
    <string name="default_wordcount">0</string>
    <string name="name_invalid">Invalid name</string>
    <string name="dialog_add_user_title">Follow an NaNoWrimo\'s user</string>
    <string name="please_loading">Loading..Wait..</string>
    <string name="unfollow_people">Unfollow</string>
    <string name="follow_people">Follow</string>
    <string name="error_network_widget">Error</string>
    <string name="stats_wordcount">Global word count</string>
    <string name="stats_wordcount_today">Today word count</string>
    <string name="stats_daily_target">Daily target</string>
    <string name="stats_daily_target_remaining">Daily target word count remaining</string>
    <string name="stats_nb_day_remaining">Days remaining</string>
    <string name="stats_empty">...</string>
    <string name="error_network_widget_toast">Network error for %1$s (%2$s)</string>
    <string name="error_network_fragment_bottom">network</string>
    <string name="yes">Yes</string>
    <string name="follow">Follow</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_remove_user_title">Are you sure ?</string>
    <string name="dialog_remove_user_message">Do you really want unfollow %1$s\'s progression ?</string>
    <string name="title_graph">Statistics</string>
    <string name="stats_marker_view">%1$s words at %2$s\n%3$s words this day</string>
    <string name="stats_bar_marker_view">%1$s words at %2$s</string>

    <string name="widget_title_global">Global wordcount</string>
    <string name="widget_title">Daily wordcount</string>
    <string name="show_friends">show friends</string>
    <string name="title_friends_activity">Buddies of %1$s</string>
    <string name="btn_action_remove">Unfollow</string>
    <string name="btn_action_add">follow</string>
    <string name="compare_with">compare with</string>
    <string name="dialog_picker_default">Enter Name</string>
    <string name="dialog_picker_title">Some Title</string>
    <string name="btn_valid_compare_with">Save</string>
    <string name="choose_favorite_user">Select favorite</string>
    <string name="title_compare_activity">%1$s vs %2$s</string>
    <string name="linear_progress_label">Theoretically progression</string>

    <string name="appwidget_text_name">Name : %1$s</string>
    <string name="appwidget_text_novel">Novel : %1$s</string>
    <string name="appwidget_text_progress">%1$d / %2$d</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_nano_auto_update_title">Update NaNoWriMo Account</string>
    <string name="pref_nano_auto_update_summary">Automatically update your NaNoWriMo account when you
        add a wordcount</string>
    <string name="pref_nano_auto_update_true">Automatically send your wordcount to the NaNoWriMo website</string>
    <string name="pref_nano_auto_update_false">Do not send your wordcount to the NaNoWriMo website</string>

    <string name="pref_nano_username_title">NaNoWriMo Username</string>
    <string name="pref_nano_username_default">mrspaceman</string>

    <string name="pref_nano_user_secret_key_title">NaNoWriMo Secret Key</string>
    <string name="pref_nano_user_secret_key_default">Unknown</string>

    <string name="pref_nano_user_region_title">NaNoWriMo Region</string>
    <string name="pref_nano_user_region_default">europe-england-bristol-bath</string>

    <string name="pref_wordcount_target_title">Target Wordcount</string>
    <string name="pref_wordcount_target_default">50000</string>

    <string name="pref_novel_name_title">Novel Name</string>
    <string name="pref_novel_name_default">My New Novel</string>

    <string name="title_activity_about">AboutActivity</string>
    <string name="about_description_one">This app helps you track your progress towards winning <b>NaNoWriMo</b>
    </string>
    <string name="about_cell_number_1">Daily Target</string>
    <string name="about_cell_number_2">Daily Target-Revised</string>
    <string name="about_cell_number_3">Actual Words Written</string>
    <string name="about_cell_number_4">Total Words Written</string>
    <string name="about_cell_number_5">Words Left</string>
    <string name="title_activity_kotlin">KotlinActivity</string>
</resources>
